# LitteraGPT

./: .gitattributes  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
.github/workflows/: tests.yml
.streamlit/: config.toml
model/: LitteraGPT_64_528_10000_esp.pt
src/litteragpt/: main.py  settings.py  styles.py  utils.py
src/litteragpt/ml/: decoder.py  tokenizer.py
src/litteragpt/transformer/: config.py  decoder.py  model.py  token_map.json  tokenizer.py
tests/: conftest.py  test_decoder.py  test_example.py  test_main.py  test_tokenizer.py  test_utils.py
