[tool.poetry]
name = "litteragpt"
version = "0.1.0"
description = ""
authors = ["Sergio Tejedor <tejedor.moreno@gmail.com>"]
readme = "README.md"
packages = [{include = "litteragpt", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
python-dotenv = "^1.0.1"
streamlit = "^1.34.0"
torch = "2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
toml = "^0.10.2"
icecream = "^2.1.3"
torchtyping = "^0.1.4"
numpy = "^1.26.4"
streamlit = "^1.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
addopts = "--cov=litteragpt"
testpaths = [
   "tests",
]
pythonpath = ["src"]
